@@ -1,9 +1,15 @@
+Fri Aug 17 12:28:32 UTC 2012  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/config-hpux-11.00.h:
+        * ace/config-linux.h:
+	  Fixes (hopefully) for non-compliant POSIX platforms.
+
 Fri Aug 17 11:19:01 UTC 2012  Martin Corino  <mcorino@remedy.nl>
 
         * tests/Monotonic_Message_Queue_Test.cpp:
         * tests/Monotonic_Task_Test.cpp:
           Added include files because of compile errors in certain
-	  builds.
+          builds.
 
 Fri Aug 17 09:04:50 UTC 2012  Martin Corino  <mcorino@remedy.nl>
 
